other-cel/deny-secret-service-account-token-type/.chainsaw-test/bad-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: bad-secret
  annotations:
    kubernetes.io/service-account.name: build-robot
type: kubernetes.io/service-account-token
