other-cel/deny-secret-service-account-token-type/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-secret-service-account-token-type
status:
  ready: true
