other-cel/deny-secret-service-account-token-type/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: deny-secret-service-account-token-type
spec:
  # disable templating because it can cause issues with CEL expressions
  template: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ../deny-secret-service-account-token-type.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: deny-secret-service-account-token-type
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: good-secret.yaml
    - apply:
        file: no-type-secret.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-secret.yaml
